--- a/frontend/assets/css/components/typography.scss
+++ b/frontend/assets/css/components/typography.scss
@@ -31,7 +31,7 @@
         @apply leading-loose
     }
 
-    quote {
+    blockquote {
         @apply font-serif;
         font-size: 1.5rem;
     }
