--- a/frontend/assets/css/style.scss
+++ b/frontend/assets/css/style.scss
@@ -12,4 +12,5 @@
 @import "components/typography";
 @import "components/buttons";
 @import "components/cards";
-@import "components/tables.scss"
+@import "components/tables.scss";
+@import "components/accordions.scss";
