--- a/frontend/assets/css/components/typography.scss
+++ b/frontend/assets/css/components/typography.scss
@@ -10,12 +10,17 @@
         line-height: 1.2;
     }
     h3 {
-        @apply font-sans font-bold;
+        @apply font-sans font-medium;
         font-size: 2rem;
     }
 
     h4 {
+        @apply font-normal;
+    }
+
+    h6 {
         @apply font-bold;
+        @apply text-gray-dark;
     }
 
     .smallcaps {
@@ -32,7 +37,7 @@
     }
 
     blockquote {
-        @apply font-serif;
+        font-family: 'kepler-std', serif;
         font-size: 1.5rem;
     }
 }
