several fixes, desktop versions of home, find-a-home archive and single

--- a/frontend/assets/css/components/buttons.scss
+++ b/frontend/assets/css/components/buttons.scss
@@ -1,41 +1,44 @@
 @layer base {
-
-.btn {
+  .btn {
     padding: 1.25rem 1.75rem;
     font-weight: 500;
     text-align: center;
     border-radius: 3px;
     justify-content: center;
 
+    @media (min-width: 1024px) {
+      padding: 1rem 3rem;
+    }
+
     &-primary {
-        @apply bg-primary text-white;
+      @apply bg-primary text-white;
     }
 
     &-secondary {
-        @apply bg-secondary text-white;
+      @apply bg-secondary text-white;
     }
 
     &-transparent {
-        @apply border border-white text-white
+      @apply border border-white text-white;
     }
 
     &-secondary-transparent {
-        @apply border-2 border-secondary text-gray-dark;
+      @apply border-2 border-secondary text-gray-dark;
     }
 
     &-full {
-        @apply w-full;
+      @apply w-full lg:w-auto;
     }
 
     &-auto {
-        @apply w-auto;
+      @apply w-auto;
     }
-}
+  }
 
-.filter-btn {
-    @apply py-2 px-5 rounded-md mr-3 border border-gray-light;
+  .filter-btn {
+    @apply mr-3 rounded-md border border-gray-light px-5 py-2;
     &-active {
-        @apply bg-primary text-white font-bold border-none;
+      @apply border-none bg-primary font-bold text-white;
     }
-}
+  }
 }
