all form components and prequalify form

--- a/frontend/assets/css/style.scss
+++ b/frontend/assets/css/style.scss
@@ -15,3 +15,4 @@
 @import "components/tables.scss";
 @import "components/accordions.scss";
 @import "components/tabs.scss";
+@import "components/forms.scss";
