services, homebuyers guide, and faqs

--- a/frontend/assets/css/components/accordions.scss
+++ b/frontend/assets/css/components/accordions.scss
@@ -1,26 +1,28 @@
-.accordion {
+@layer base {
+  .accordion {
     &-item {
-        border-bottom-width: 1px;
-        @apply border-gray-light;
-        &:last-of-type {
-            border-bottom: none;
-        }
-    &-content {
+      border-bottom-width: 1px;
+      @apply border-gray-light;
+      &:last-of-type {
+        border-bottom: none;
+      }
+      &-content {
         @apply pl-10 pt-5;
 
         h6 {
-            @apply mb-2;
+          @apply mb-2;
         }
 
         ul {
-            @apply list-disc list-inside mb-6;
-            &:last-of-type {
-                margin-bottom: 0;
-            }
-            li {
-                @apply text-gray-dark mb-2;
-            }
+          @apply mb-6 list-inside list-disc;
+          &:last-of-type {
+            margin-bottom: 0;
+          }
+          li {
+            @apply mb-2 text-gray-dark;
+          }
         }
+      }
     }
-}
+  }
 }
