--- a/frontend/assets/css/style.scss
+++ b/frontend/assets/css/style.scss
@@ -16,3 +16,5 @@
 @import "components/accordions.scss";
 @import "components/tabs.scss";
 @import "components/forms.scss";
+@import "components/lists.scss";
+@import "components/content.scss";
