blog, location archive

--- a/frontend/assets/css/components/buttons.scss
+++ b/frontend/assets/css/components/buttons.scss
@@ -5,6 +5,7 @@
     text-align: center;
     border-radius: 3px;
     justify-content: center;
+    display: inline-block;
 
     @media (min-width: 1024px) {
       padding: 1rem 3rem;
