--- a/frontend/assets/css/components/accordions.scss
+++ b/frontend/assets/css/components/accordions.scss
@@ -7,7 +7,7 @@
         border-bottom: none;
       }
       &-content {
-        @apply pl-10 pt-5;
+        @apply pt-5;
 
         h6 {
           @apply mb-2;
