--- a/frontend/assets/css/style.scss
+++ b/frontend/assets/css/style.scss
@@ -14,6 +14,7 @@
 @import "components/cards";
 @import "components/tables.scss";
 @import "components/accordions.scss";
+@import "components/sliders.scss";
 @import "components/tabs.scss";
 @import "components/forms.scss";
 @import "components/lists.scss";
