--- a/frontend/assets/css/style.scss
+++ b/frontend/assets/css/style.scss
@@ -2,6 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer utilities {
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+  .no-scrollbar {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+}
+
 @font-face {
   font-family: "Calaya";
   src: url("/fonts/CalayaRegular.ttf") format("truetype");
