--- a/shared/assets/css/components/typography.scss
+++ b/shared/assets/css/components/typography.scss
@@ -1,6 +1,8 @@
 @layer base {
   html {
     font-size: 14px;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 
     @media (min-width: 1024px) {
       font-size: 16px;
